@@ -51,7 +51,7 @@ void io_file_format_to_string( io_file_format_t format_set, utf8stringbuf_t out_
 
     if ( ( format_set & IO_FILE_FORMAT_XHTML ) != 0 )
     {
-        utf8stringbuf_append_str( out_fileformat, (count==0)?("xhtml"):(", xhtml") );
+        utf8stringbuf_append_str( out_fileformat, (count==0)?("html"):(", html") );
         count ++;
     }
 
