@@ -2,6 +2,7 @@ crystal-facet-uml (1.54.0) UNRELEASED; urgency=medium
 
   [ Andreas Warnke ]
   * The json export creates a schema file that explains the json format
+  * The html export creates nav, main and article tags
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 29 Oct 2023 07:00:00 +0100
 
